# auth-py

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  x
alembic/: env.py
alembic/versions/: 0bce084d4400_phase_1_initial_schema_with_user_and_.py  2b67bb61fc3d_initial_migration.py  449c062c5de0_add_token_revocation_tracking_and_scope.py  4d91b89d6859_initial_database_schema.py  5de39693b11d_initial_migration.py  62e2de016e80_add_pending_email_field.py  8fe53c4116cf_add_password_reset_fields.py  ce512982da0c_type_adjustments.py  d9a4dcf19d99_initial_migration.py  e80cf61044a3_add_roles_to_user_model.py
app/: __init__.py  main.py
app/api/: __init__.py  system.py
app/api/v1/: __init__.py  dependencies.py
app/core/: __init__.py  auth.py  config.py  email.py  errors.py  jwt.py  metadata.py  oauth2.py  redis.py  registrar.py  security.py  types.py
app/core/database/: __init__.py  postgres.py  redis.py
app/core/dependencies/: __init__.py  auth.py  database.py  token.py
app/core/jwt/: __init__.py  tokens.py
app/core/middleware/: __init__.py  audit.py  context.py  (+5 more)
app/db/: __init__.py  base.py  postgres.py  redis.py
app/models/: __init__.py  audit.py  base.py  token.py  user.py
app/repositories/: __init__.py  audit.py  base.py  token.py  user.py
app/schemas/: __init__.py  audit.py  base.py  token.py  user.py
app/services/: __init__.py  audit.py  auth.py  email.py  token.py  user.py
app/utils/: __init__.py  request.py
scripts/: x.sh
stubs/testcontainers/: postgres.pyi  redis.pyi
tests/: conftest.py
(+22 files in other folders)
